# MQTT_Led_Panel

./: .gitignore  MQTT_test.py  connect_to_pannel.py  true_config.json
Programe_ESP/PANEL_LED_ESP/: CMakeLists.txt  custom_partitions.csv  sdkconfig  sdkconfig.old
Programe_ESP/PANEL_LED_ESP/components/arduino/: CMakeLists.txt
Programe_ESP/PANEL_LED_ESP/components/arduino/libraries/ESP32-HUB75-MatrixPanel-DMA-master/: CMakeLists.txt
Programe_ESP/PANEL_LED_ESP/components/arduino/libraries/ESP32-HUB75-MatrixPanel-DMA-master/src/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h
Programe_ESP/PANEL_LED_ESP/components/arduino/libraries/SmartMatrix-master/: CMakeLists.txt
Programe_ESP/PANEL_LED_ESP/components/arduino/libraries/SmartMatrix-master/src/: Layer_Background_Impl.h  MatrixEsp32Hub75Calc_Impl.h  MatrixHardware_ESP32_V0.h  esp32_i2s_parallel.c
Programe_ESP/PANEL_LED_ESP/main/: .clang-format  CMakeLists.txt  MQTT_error.h  app_main.cpp  config.h  ethernet_module.c  led_module.cpp  led_module.hpp  logo.h  mqtt_module.c  mqtt_module.h  storage_module.c  storage_module.h
conception/PANEL_LED_HARDWARE/: #auto_saved_files#  New_Library.bak  New_Library.kicad_sym  PANEL_LED_HARDWARE.kicad_pcb  PANEL_LED_HARDWARE.kicad_prl  PANEL_LED_HARDWARE.kicad_pro  PANEL_LED_HARDWARE.kicad_sch  PANEL_LED_HARDWARE.kicad_sch-bak  fp-info-cache
conception/PANEL_LED_HARDWARE/gerber/: PANEL_LED_HARDWARE-B_Cu.gbl  PANEL_LED_HARDWARE-B_Mask.gbs  PANEL_LED_HARDWARE-B_Paste.gbp  PANEL_LED_HARDWARE-B_Silkscreen.gbo  PANEL_LED_HARDWARE-Edge_Cuts.gm1  PANEL_LED_HARDWARE-F_Cu.gtl  PANEL_LED_HARDWARE-F_Mask.gts  PANEL_LED_HARDWARE-F_Paste.gtp  PANEL_LED_HARDWARE-F_Silkscreen.gto  PANEL_LED_HARDWARE-PTH.drl
conception/PANNEL_LED_HARDWARE/: PANNEL_LED_HARDWARE.kicad_prl  PANNEL_LED_HARDWARE.kicad_pro  PANNEL_LED_HARDWARE.kicad_sch  fp-info-cache
